[package]
name = "auth_sample"
version = "0.1.0"
authors = ["CityBear3"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3.1"
actix-redis = "0.9.2"
actix-session = "0.4.1"
actix-web = { version = "3.3.2", features = ["openssl"] }
askama = "0.10.5"
bigint = "4.4.3"
env_logger = "0.8.3"
openssl = "0.10.34"
rand = "0.8.3"
rand_chacha = "0.3.0"
serde = { version = "1.0.125", features = ["derive"] }
simplelog = "0.10.0"

